--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>Document</title>
+    <title>UMAT-RESIT</title>
     <link rel="stylesheet" href="pagestyle.css">
 </head>
 <body>
