--- a/about.html
+++ b/about.html
@@ -38,7 +38,33 @@
     <p><span id="news">NEWS AND MEDIA
      <br><input type="button" value="Read" id="read-1" ></span></p>
 </div>
+<div class="about-h2">
+    <h2>Vision and Mission Statements</h2>
+    <hr>
+</div>
 
+<div class="about-1">
+    <div class="about-each">
+        <h3>VISION </h3>
+        <p>The vision of the University is to be a Centre of Excellence
+            in Ghana and Africa for producing world-class
+            professionals in the fields of mining, petroleum,
+            technology and related disciplines.</p>
+    </div>
+    <div class="about-each">
+        <h3>MISSION </h3>
+        <p>The mission is to provide higher education in mining, petroleum, technology
+            and related disciplines through effective teaching and learning; to promote
+            knowledge through active research and dissemination of information and to offer
+            professional services through extension activities to the mining and allied industries.</p>
+    </div>
+    <div class="about-each">
+        <h3>GUIDING PHILOSOPHY </h3>
+        <p>The philosophy of UMaT is to guide students to develop their intellectual capabilities and
+            appreciate good social and moral values. The major aim is to produce world-class
+            graduates capable of providing useful professional services.</p>
+    </div>
+</div>
 
 <!--FOOTER SECTION-->
 <div class="footer">
@@ -71,6 +97,8 @@
         <p>Chemical & Petrochemical Eng</p>
     </div>
 </div>
+
+
 <div class="footer-last">
     <p>Privacy & Cookies  |  Terms & Conditions  |  Accessibility  |  Store Directory  |  About Us</p>
     <p>All Rights Reserved Copyright 2022 University of Mines and Technology (UMaT). Tarkwa Ghana, Tel: +233 3123 20324/20280</p>
