--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 <body>
 <!--TOP BAR-->
 <div id="top-bar">
-
     <a href="index.html"> <img src="umat-logo.png" alt="umat-logo is placed here." id="umat-logo"></a>
-     <h1 id="umat" class="umat-head"><a href="index.html">UNIVERSITY OF MINES AND TECHNOLOGY (UMaT)</a>  </h1>
+     <h1 id="umat" class="umat-head" ><a href="index.html" style="font-family: 'Aileron Black'">UNIVERSITY OF MINES AND TECHNOLOGY (UMaT)</a> </h1>
 </div>
 
 <!--NAVIGATION BAR-->
@@ -135,7 +134,6 @@
     <p>Privacy & Cookies  |  Terms & Conditions  |  Accessibility  |  Store Directory  |  About Us</p>
     <p>All Rights Reserved Copyright 2022 University of Mines and Technology (UMaT). Tarkwa Ghana, Tel: +233 3123 20324/20280</p>
 </div>
-
 
 </body>
 </html>
